driver/tests/snap/type_error/unbound_variable/0_input.splic
def bad() -> u32 = { x };
